--- a/src/css/estabelecimentos.css
+++ b/src/css/estabelecimentos.css
@@ -30,3 +30,92 @@ form {
     width: 70%;
     margin: auto;
 }
+/**Depoimentos*/
+.locais-wrap{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 70%;
+    margin: 0 auto;
+  }
+  .local {
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    max-width: 350px;
+    text-align: center;
+    margin-top: 60px;
+    margin-left: 15px;
+    width: 360px;
+    margin-bottom: 15px;
+  }
+  
+  .local_img {
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 100%;
+    margin: -60px auto 0;
+  }
+  .local_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .local_info {
+    padding-bottom: 20px;
+  }
+  a {
+  text-decoration: none;
+  color: cadetblue;
+  }
+  
+  .local p {
+    padding: 10px;
+    margin: auto;
+    text-align: justify;
+  }
+  
+  .fa-lg { 
+    transition: all .5s;
+    color: #6E93f7;
+  }
+  
+  .prev, .next {
+    background-color: none !important;
+    padding: 10px;
+    border-radius: 50%;
+    top: 190%;
+    transform: translateY(-50%);
+    z-index: 1;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 50px;
+    position: absolute;
+  }
+  
+  .prev {
+    left: 110px;
+    margin-top: 85px;
+  }
+  
+  .next {
+    right: 110px;
+    margin-top: 85px;
+  }
+  
+  /**Depoimentos*/
+
+  .denuncia-button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
